--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 		<spring-ai.version>1.1.0-M2</spring-ai.version>
         <spring-modulith.version>1.4.1</spring-modulith.version>
         <minio.version>8.6.0</minio.version>
+        <okhttp.version>4.12.0</okhttp.version>
+        <testcontainers.version>1.21.3</testcontainers.version>
 	</properties>
 	<dependencies>
         <dependency>
@@ -109,6 +111,12 @@
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
         </dependency>
+        <!-- minio requires this-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -120,6 +128,20 @@
             <artifactId>spring-modulith-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Testcontainers -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
