A bunch of changes, persistence layer, data ingestion service etc.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ app:
   name: "@project.name@"
   version: "@project.version@"
 
+aiart:
+  ingestion:
+    enabled: true
+
 spring:
   application:
     name: ai-art
