--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     model:
       chat: ollama
     ollama:
-      # base-url: http://localhost:11434
+      base-url: http://localhost:11434
       chat:
         options:
           # model: bakllava:latest
