--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,7 @@ app:
   version: "@project.version@"
 
 aiart:
-  ingestion:
-    enabled: true
+  data.seeder.enabled: true
 
 spring:
   application:
