--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -70,8 +70,8 @@ logging:
     com.giri.aiart: debug
 
 minio:
-  endpoint: http://127.0.0.1:9000
-  accessKey: minioadmin
-  secretKey: minioadmin
-  bucket-name: test-bucket
-  secure: false
+  endpoint: ${MINIO_URL:http://127.0.0.1:9000}
+  access-key: ${MINIO_ACCESS_KEY:minioadmin}
+  secret-key: ${MINIO_SECRET_KEY:minioadmin}
+  bucket-name: ${MINIO_BUCKET_NAME:test-ai-art}
+  secure: ${MINIO_SECURE:false}
